--- a/面试题总结答案.md
+++ b/面试题总结答案.md
@@ -24,8 +24,8 @@
   **Java内存模型(JMM)：**
 
      * 1、堆内存(存储所有的实例域、静态域、数组元素)在线程之间共享，但是局部变量、方法定义参数、异常处理器参数不会在线程之间共享。
-     * 2、Java的线程通信由JMM控制，它定义了线程和主内存之间的抽象关系：线程之间的共享变量都存储在主内存中，每一个线程都会有一个私有的本地内存(用于存储该线程中已读/写共享变量的副本，但不是真实存在的)，
-       <img src="F:\面试\面试\面试总结\面试题\img\Java内存模型抽象图解.jpg" alt="Java内存模型抽象图解" style="height:400px; width: 600px" />
+     * 2、Java的线程通信由JMM控制，它定义了线程和主内存之间的抽象关系：线程之间的共享变量都存储在主内存中，每一个线程都会有一个私有的本地内存(用于存储该线程中已读/写共享变量的副本，但不是真实存在的).
+       <img src="./img/Java内存模型抽象图解.jpg" alt="Java内存模型抽象图解" style="height:400px; width: 600px" />
      * 3、JMM通过控制主内存和每个线程的本地内存之间的交互，来为Java程序提供内存可见性保证。
 
   **重排序**
