更新了目录结构

--- a/面试题总结答案.md
+++ b/面试题总结答案.md
@@ -4,134 +4,201 @@
 
 ## Java基础
 
+### 美团
+
+#### 1、对红黑树的了解？有什么特点
+
+**二叉查找树(BST)**
+
+> * 1、左子树上的所有节点的值均小于等于它的根节点的值。
+> * 2、右子树上的所有节点的值均大于等于它的根节点的值。
+> * 3、左右子树也分别为二叉查找树。
+
+**红黑树**
+
+> 红黑树可以解决二叉搜索树多次插入数据导致不平衡的问题。
+>
+> 红黑树是一种自平衡的二叉查找树。
+>
+> 红黑树从根节点到叶子节点的最长路径不会超过最短路径的两倍。
+>
+> **特点**：
+>
+> * 1、每个节点都是红色或者黑色的。
+> * 2、根节点是黑色的。
+> * 3、每个叶节点是黑色的。
+> * 4、每个红色节点的两个子节点都是黑色的 -->从每个叶子到根的所有路径上不能有两个连续的红色节点。
+> * 5、从任一节点到其每个叶子节点的所有路径都包含相同数目的黑色节点。
+>
+> **红黑树的调整方法**：
+>
+> * 1、变色：为了满足红黑树的规则，尝试把红色节点变为黑色，或者把黑色节点变为红色。
+> * 2、旋转：
+>   * 左旋转：逆时针旋转红黑树的两个节点，使得父节点被自己的右孩子取代，而自己成为自己的左孩子。
+>   * 右旋转：顺时针旋转红黑树的两个节点，使得父节点被自己的左孩子取代，而自己成为自己的右孩子。
+>
+> **红黑树的应用**
+>
+> * 1、JDK的集合类TreeMap和TreeSet的底层为红黑树，而且JDK8的HashMap底层实现也使用了红黑树。
+
+#### 2、HashMap的底层原理
+
+**JDK1.7**
+
+> **存储结构**
+>
+> * 1、内部包含了一个Entry类型的table数组，Entry类型用来存储键值对、哈希值以及next字段。
+> * 2、数组的每个位置被当做一个桶，然后每个桶里面放链表。
+> * 3、HashMap使用拉链法来解决同一个链表中存放哈希值和散列桶取模运算相同的Entry。
+> * 4、链表的插入方式是采用的头插法。
+> * 5、HashMap插入数据时是采用取模运算来计算应该插入的位置，如果可以保证HashMap的capacity的值为2的n次方，那么就可以将取模转化为与运算。
+> * 6、HashMap构造函数允许用户传入的容量不是2的n次方，但是内部会自动将其转化为2的n次方。
+>
+> **扩容**
+>
+> * 1、当HashMap的size大于等于阈值threshold时就会触发扩容。
+> * 2、扩容使用resize()方法实现需要把oldtable的所有键值对重新插入到newTable中。
+> * 3、扩容后需要重新计算每个节点的下标，而如果HashMap的capacity为2的n次方，那么就可以加速确定的下标的过程。
+>
+> **其他**
+>
+> * 1、从JDK1.8开始，一个桶的存储的链表长度大于等于8时会将链表转化为红黑树。
+> * 2、和Hashtable的比较：
+>   * 1、Hashtable是线程安全的，使用synchronized来同步。
+>   * 2、HashMap可以插入键值为null的Entry
+>   * 3、HashMap的迭代器是fail-fast迭代器。
+>   * 4、HashMap不能保证随着时间的推移Map元素次序是不变的。
+
 ## 并发
+
+### 美团
+
+#### 1、谈谈对Java内存模型的了解
+
+**预备知识：**
+
+* 1、通信机制：
+  * 1、在命令式编程中，线程通信的方式有两种：共享内存和消息传递
+    * 2、在共享内存的并发模型中，线程之间共享程序的公共状态，通过写读内存中的公共状态来隐式通信。但是同步是显示进行的，程序员必须指定某个方法或者代码块在线程之间互斥执行。
+    * 3、在消息传递的并发模型中，线程之间没有公共状态，线程之间必须通过消息传递来显式通信。但是同步是隐式进行的，因为消息发送必须在消息接收之前。
+    * 4、Java的并发是采用共享内存模型，整个通信过程都是隐式进行的，对程序员来说是完全透明的。
+    * 5、同步是指程序中用于控制不同线程间操作发生相对顺序的机制。
+
+**Java内存模型(JMM)：**
+
+   * 1、堆内存(存储所有的实例域、静态域、数组元素)在线程之间共享，但是局部变量、方法定义参数、异常处理器参数不会在线程之间共享。
+   * 2、Java的线程通信由JMM控制，它定义了线程和主内存之间的抽象关系：线程之间的共享变量都存储在主内存中，每一个线程都会有一个私有的本地内存(用于存储该线程中已读/写共享变量的副本，但不是真实存在的).
+     <img src="./img/Java内存模型抽象图解.jpg" alt="Java内存模型抽象图解" style="height:400px; width: 600px" />
+   * 3、JMM通过控制主内存和每个线程的本地内存之间的交互，来为Java程序提供内存可见性保证。
+
+**重排序**
+
+* 1、类别：以下的重排序可能会导致出现内存可见性问题。
+  * 编译器级别的重排序：不改变单线程的语义的前提下，重新安排语句的执行顺序。
+  * 指令级并行的重排序：现代处理器采用了指令并行技术，如果不存数据依赖性，处理器可以改变指令的执行顺序。
+  * 内存系统的重排序：由于缓存和读写缓冲区可能会导致数据读取的速度不一致，使得加载和存储操作可能会存在乱序操作，
+* 2、JMM对于重排序的处理
+  * 1、对于编译器级别的重排序，JMM的编译器重排序规则会禁止特定类型的编译器重排序。
+  * 2、对于处理器级别的重排序，JMM的处理器重排序规则会要求Java编译器在生成指令序列时插入特定类型的内存屏障，通过内存屏障指令来禁止特定类型的处理器重排序。
+
+**hapens-before**
+
+> * 1、从JDK5之后，Java使用新的JSR-133内存模型， 仅仅只允许把一个64位long/double型变量的写操作拆分为两个32位的写操作来执行，任意读操作在JSR-133中都必须具有原子性。
+> * 2、JSR-133模型使用happens-before来描述操作之间的内存可见性。
+> * 3、在JMM之中，如果一个操作的执行结果要对另一个操作可见，那么两个操作之间必须存在happens-before关系，没有对两个操作的执行顺序做要求。两个操作既可以是在一个线程内，也可以在不同的线程之间。
+> * 4、常见的happens-before规则：
+>   * 1、程序顺序规则：一个线程中的每个操作，happens-before于该线程中的任意后续操作。
+>   * 2、监视器锁规则：对一个锁的解锁，happens-before于随后对这个锁的加锁。
+>   * 3、volatile变量规则：对一个volatile域的写，happens-before于任意后续对这个volatile域的读。
+>   * 4、传递性：如果A happens-before B, 且B happens-before C，那么A happens-before C。
+> * 5、一个happens-before规则对应于一个或多个编译器和处理器重排序规则。
+
+**数据依赖性**
+
+> * 1、数据依赖性包含3种类型：写后读、写后写、读后写
+> * 2、编译器和处理器在重排序时会遵守数据依赖性，不会改变存在数据依赖关系的两个操作的执行顺序，但是只针对于单个处理器中执行的指令序列和单个线程中执行的操作，不同处理器和不同线程之间的数据依赖不会被编译器和处理器考虑。
+> * 3、当代码中存在控制依赖性时，会印象指令序列执行的并行度，因此编译器和处理器会采用猜测执行来克服控制相关性对并行度的影响。
+>
+> **as-if-serial语义**
+>
+> > * 1、不管怎么重排序，单线程程序的执行顺序不会被改变，编译器、runtime和处理器都必须要遵守as-if-serial语义。
+> > * 2、单线程程序按照顺序执行是依赖于as-if-serial语义保证的。
+
+**数据竞争和顺序一致性**
+
+> **数据竞争**
+>
+> * 1、在一个线程中写一个变量
+> * 2、在另一个线程中读同一个变量
+> * 3、写和读没有通过同步来排序
+> * 4、如果程序是正确同步的，程序的执行将具有顺序一致性——即程序的执行结果与该程序在顺序一致性内存模型中的执行结果相同。
+>
+> **顺序一致性内存模型**
+>
+> > 这是一个理想化的参考模型，它提供了极强的内存可见性保证。
+> >
+> > 特性：
+> >
+> > * 1、一个线程中的所有操作必须按照程序的来执行
+> > * 2、不管程序是否同步，所有线程都只能看到一个单一的操作执行顺序。在顺序一致性内存模型中，每个操作都必须原子执行且立刻对所有线程可见。
+>
+> * 1、JMM在具体实现的基本方针为：在不改变程序执行结果的前提下，尽可能的进行编译器和处理器的优化
+> * 2、JMM不保证未同步程序的执行结果与该程序在顺序一致模型中的执行结果一致。
+> * 3、JMM不保证对64位的long型和double型变量的写操作具有原子性，而顺序一致性模型保证对所有的内存读写操作都具有原子性。
+
+**volatile**
+
+> * 1、对一个volatile变量的读，总是能看到(任意线程)对这个volatile变量最后的写入。
+> * 2、对任意单个volatile变量的读/写具有原子性，但类似于v++这种复合操作不具有原子性。
+> * 3、从JSR-133开始，volatile变量的写-读可以实现线程之间的通信(一个线程向主内存中写一个volatile变量，另一个线程从主内存中读取之前某个线程写入的volatile变量，实质是一个线程通过主内存向另一个线程发送消息)。
+> * 4、volatile写的内存语义：当写一个volatile变量时，JMM会把该线程对应的本地内存中的共享变量值刷新到主内存中。
+> * 5、volatile读的内存语义：当写一个volatile变量时，JMM会把该线程对应的本地内存置为无效，然后从主内存中读取共享变量。
+>
+> **volatile语义的实现**
+>
+> > * 1、为了实现volatile的内存语义，编译器生成字节码时，会在指令序列中插入内存屏障来禁止特定类型的处理器重排序。
+> > * 2、volatile的读-写具有锁的释放-获取相同的内存语义。
+> > * 3、JMM采取保守的内存屏障插入策略：==》可以保证在任意处理器平台上，任意的程序中都能得到正确的volatile内存语义。
+> >   * 1、在每个volatile写操作的前面插入一个StoreStore屏障(保证上面的所有的普通写都在volatile写之前刷新到主内存中)。
+> >   * 2、在每个volatile写操作的后面插入一个StoreLoad屏障(避免volatile写与后面可能有的volatile读/写操作重排序)。
+> >   * 3、在每个volatile读操作的后面插入一个LoadLoad屏障(禁止处理器把上面的volatile读与下面的普通读重排序)。
+> >   * 4、在每个volatile读操作的后面插入一个LoadStore屏障(禁止处理器把上面的volatile读与下面的普通写重排序)。
+
+**锁**
+
+> * 1、锁不仅可以让临界区互斥执行，还可以让释放锁的线程向获取锁的另一个线程发送消息。
+> * 2、当线程释放锁时，JMM会把该线程对应的本地内存中的共享变量刷新到主内存中。
+> * 3、当线程获取锁时，JMM会把该线程对应的本地内幕才能置为无效，从而使得被监视器保护的临界区代码必须从主内存中读取共享变量。
+>
+> **锁的内存语义(以ReentrantLock锁为例)**
+>
+> > * 1、ReentrantLock的实现依赖于AbstractQueueSynchronizer，简称为AQS
+> > * 2、AQS使用了一个整型的volatile变量来维护同步状态。
+> > * 3、CAS：如果当前状态值等于预期值，则以原子方式将同步状态设置为给定的更新值，具有volatile读和写的内存语义，因为CAS是基于volatile变量state来实现的。
+> >
+> > **ReentrantLock**
+> >
+> > * 1、公平锁和非公平锁释放时，最后都要写一个volatile变量state
+> > * 2、公平锁获取时，首先会去读volatile变量。
+> > * 3、非公平锁获取时，首先会用CAS更新volatile变量，这个操作同时具有volatile读和volatile写的内存语义。
+>
+> *锁的内存语义的实现*
+>
+> * 1、利用volatile变量的写-读所具有的内存语义。
+> * 2、利用CAS所附带的volatile读和volatile写的内存语义。
+
+**final域的重排序规则**
+
+> **重排序规则**
+>
+> * 1、在构造函数类对一个final域的写入，与随后把这个被构造对象的引用赋值给一个引用变量，这两个操作之间不能重排序。
+> * 2、初次读一个包含final域的对象的引用，与随后初次读这个final域，这两个操作之间不能进行重排序。
 
 ## JVM
 
 ### 美团
 
-* 1、谈谈对Java内存模型的了解
-
-  **预备知识：**
-
-  * 1、通信机制：
-    * 1、在命令式编程中，线程通信的方式有两种：共享内存和消息传递
-       * 2、在共享内存的并发模型中，线程之间共享程序的公共状态，通过写读内存中的公共状态来隐式通信。但是同步是显示进行的，程序员必须指定某个方法或者代码块在线程之间互斥执行。
-       * 3、在消息传递的并发模型中，线程之间没有公共状态，线程之间必须通过消息传递来显式通信。但是同步是隐式进行的，因为消息发送必须在消息接收之前。
-       * 4、Java的并发是采用共享内存模型，整个通信过程都是隐式进行的，对程序员来说是完全透明的。
-       * 5、同步是指程序中用于控制不同线程间操作发生相对顺序的机制。
-
-  **Java内存模型(JMM)：**
-
-     * 1、堆内存(存储所有的实例域、静态域、数组元素)在线程之间共享，但是局部变量、方法定义参数、异常处理器参数不会在线程之间共享。
-     * 2、Java的线程通信由JMM控制，它定义了线程和主内存之间的抽象关系：线程之间的共享变量都存储在主内存中，每一个线程都会有一个私有的本地内存(用于存储该线程中已读/写共享变量的副本，但不是真实存在的).
-       <img src="./img/Java内存模型抽象图解.jpg" alt="Java内存模型抽象图解" style="height:400px; width: 600px" />
-     * 3、JMM通过控制主内存和每个线程的本地内存之间的交互，来为Java程序提供内存可见性保证。
-
-  **重排序**
-
-  * 1、类别：以下的重排序可能会导致出现内存可见性问题。
-    * 编译器级别的重排序：不改变单线程的语义的前提下，重新安排语句的执行顺序。
-    * 指令级并行的重排序：现代处理器采用了指令并行技术，如果不存数据依赖性，处理器可以改变指令的执行顺序。
-    * 内存系统的重排序：由于缓存和读写缓冲区可能会导致数据读取的速度不一致，使得加载和存储操作可能会存在乱序操作，
-  * 2、JMM对于重排序的处理
-    * 1、对于编译器级别的重排序，JMM的编译器重排序规则会禁止特定类型的编译器重排序。
-    * 2、对于处理器级别的重排序，JMM的处理器重排序规则会要求Java编译器在生成指令序列时插入特定类型的内存屏障，通过内存屏障指令来禁止特定类型的处理器重排序。
-
-  **hapens-before**
-
-  > * 1、从JDK5之后，Java使用新的JSR-133内存模型， 仅仅只允许把一个64位long/double型变量的写操作拆分为两个32位的写操作来执行，任意读操作在JSR-133中都必须具有原子性。
-  > * 2、JSR-133模型使用happens-before来描述操作之间的内存可见性。
-  > * 3、在JMM之中，如果一个操作的执行结果要对另一个操作可见，那么两个操作之间必须存在happens-before关系，没有对两个操作的执行顺序做要求。两个操作既可以是在一个线程内，也可以在不同的线程之间。
-  > * 4、常见的happens-before规则：
-  >   * 1、程序顺序规则：一个线程中的每个操作，happens-before于该线程中的任意后续操作。
-  >   * 2、监视器锁规则：对一个锁的解锁，happens-before于随后对这个锁的加锁。
-  >   * 3、volatile变量规则：对一个volatile域的写，happens-before于任意后续对这个volatile域的读。
-  >   * 4、传递性：如果A happens-before B, 且B happens-before C，那么A happens-before C。
-  > * 5、一个happens-before规则对应于一个或多个编译器和处理器重排序规则。
-
-  **数据依赖性**
-
-  > * 1、数据依赖性包含3种类型：写后读、写后写、读后写
-  > * 2、编译器和处理器在重排序时会遵守数据依赖性，不会改变存在数据依赖关系的两个操作的执行顺序，但是只针对于单个处理器中执行的指令序列和单个线程中执行的操作，不同处理器和不同线程之间的数据依赖不会被编译器和处理器考虑。
-  > * 3、当代码中存在控制依赖性时，会印象指令序列执行的并行度，因此编译器和处理器会采用猜测执行来克服控制相关性对并行度的影响。
-  >
-  > **as-if-serial语义**
-  >
-  > > * 1、不管怎么重排序，单线程程序的执行顺序不会被改变，编译器、runtime和处理器都必须要遵守as-if-serial语义。
-  > > * 2、单线程程序按照顺序执行是依赖于as-if-serial语义保证的。
-
-  **数据竞争和顺序一致性**
-
-  > **数据竞争**
-  >
-  > * 1、在一个线程中写一个变量
-  > * 2、在另一个线程中读同一个变量
-  > * 3、写和读没有通过同步来排序
-  > * 4、如果程序是正确同步的，程序的执行将具有顺序一致性——即程序的执行结果与该程序在顺序一致性内存模型中的执行结果相同。
-  >
-  > **顺序一致性内存模型**
-  >
-  > > 这是一个理想化的参考模型，它提供了极强的内存可见性保证。
-  > >
-  > > 特性：
-  > >
-  > > * 1、一个线程中的所有操作必须按照程序的来执行
-  > > * 2、不管程序是否同步，所有线程都只能看到一个单一的操作执行顺序。在顺序一致性内存模型中，每个操作都必须原子执行且立刻对所有线程可见。
-  >
-  > * 1、JMM在具体实现的基本方针为：在不改变程序执行结果的前提下，尽可能的进行编译器和处理器的优化
-  > * 2、JMM不保证未同步程序的执行结果与该程序在顺序一致模型中的执行结果一致。
-  > * 3、JMM不保证对64位的long型和double型变量的写操作具有原子性，而顺序一致性模型保证对所有的内存读写操作都具有原子性。
-
-  **volatile**
-
-  > * 1、对一个volatile变量的读，总是能看到(任意线程)对这个volatile变量最后的写入。
-  > * 2、对任意单个volatile变量的读/写具有原子性，但类似于v++这种复合操作不具有原子性。
-  > * 3、从JSR-133开始，volatile变量的写-读可以实现线程之间的通信(一个线程向主内存中写一个volatile变量，另一个线程从主内存中读取之前某个线程写入的volatile变量，实质是一个线程通过主内存向另一个线程发送消息)。
-  > * 4、volatile写的内存语义：当写一个volatile变量时，JMM会把该线程对应的本地内存中的共享变量值刷新到主内存中。
-  > * 5、volatile读的内存语义：当写一个volatile变量时，JMM会把该线程对应的本地内存置为无效，然后从主内存中读取共享变量。
-  >
-  > **volatile语义的实现**
-  >
-  > > * 1、为了实现volatile的内存语义，编译器生成字节码时，会在指令序列中插入内存屏障来禁止特定类型的处理器重排序。
-  > > * 2、volatile的读-写具有锁的释放-获取相同的内存语义。
-  > > * 3、JMM采取保守的内存屏障插入策略：==》可以保证在任意处理器平台上，任意的程序中都能得到正确的volatile内存语义。
-  > >   * 1、在每个volatile写操作的前面插入一个StoreStore屏障(保证上面的所有的普通写都在volatile写之前刷新到主内存中)。
-  > >   * 2、在每个volatile写操作的后面插入一个StoreLoad屏障(避免volatile写与后面可能有的volatile读/写操作重排序)。
-  > >   * 3、在每个volatile读操作的后面插入一个LoadLoad屏障(禁止处理器把上面的volatile读与下面的普通读重排序)。
-  > >   * 4、在每个volatile读操作的后面插入一个LoadStore屏障(禁止处理器把上面的volatile读与下面的普通写重排序)。
-
-  **锁**
-
-  > * 1、锁不仅可以让临界区互斥执行，还可以让释放锁的线程向获取锁的另一个线程发送消息。
-  > * 2、当线程释放锁时，JMM会把该线程对应的本地内存中的共享变量刷新到主内存中。
-  > * 3、当线程获取锁时，JMM会把该线程对应的本地内幕才能置为无效，从而使得被监视器保护的临界区代码必须从主内存中读取共享变量。
-  >
-  > **锁的内存语义(以ReentrantLock锁为例)**
-  >
-  > > * 1、ReentrantLock的实现依赖于AbstractQueueSynchronizer，简称为AQS
-  > > * 2、AQS使用了一个整型的volatile变量来维护同步状态。
-  > > * 3、CAS：如果当前状态值等于预期值，则以原子方式将同步状态设置为给定的更新值，具有volatile读和写的内存语义，因为CAS是基于volatile变量state来实现的。
-  > >
-  > > **ReentrantLock**
-  > >
-  > > * 1、公平锁和非公平锁释放时，最后都要写一个volatile变量state
-  > > * 2、公平锁获取时，首先会去读volatile变量。
-  > > * 3、非公平锁获取时，首先会用CAS更新volatile变量，这个操作同时具有volatile读和volatile写的内存语义。
-  >
-  > *锁的内存语义的实现*
-  >
-  > * 1、利用volatile变量的写-读所具有的内存语义。
-  > * 2、利用CAS所附带的volatile读和volatile写的内存语义。
-
-  **final域的重排序规则**
-
-  > **重排序规则**
-  >
-  > * 1、在构造函数类对一个final域的写入，与随后把这个被构造对象的引用赋值给一个引用变量，这两个操作之间不能重排序。
-  > * 2、初次读一个包含final域的对象的引用，与随后初次读这个final域，这两个操作之间不能进行重排序。
-
-* 2、对G1垃圾收集器的算法细节的了解
+####  1、对G1垃圾收集器的算法细节的了解
 
 > * 1、G1收集器开创了收集器面向局部的设计思路和基于Region的内存布局形式。
 > * 2、G1是一款主要面向服务端应用的垃圾收集器。
@@ -191,82 +258,93 @@
 >   * 5、原始快照(STAB)搜索需要使用写前屏障来跟踪并发时的指针变化情况，相比于增量更新算法，STAB能够减少并发标记和重新标记阶段的消耗。
 >   * 6、G1对写屏障的操作较CMS更复杂，因此CMS的写屏障就是直接的同步操作，而G1却需要将其实现为类似消息队列的结构。
 
-* 3、对红黑树的了解？有什么特点
+#### 2、类加载过程
 
-  **二叉查找树(BST)**
+**类加载机制**
 
-  > * 1、左子树上的所有节点的值均小于等于它的根节点的值。
-  > * 2、右子树上的所有节点的值均大于等于它的根节点的值。
-  > * 3、左右子树也分别为二叉查找树。
+> * 1、jvm把描述类的数据从Class文件加载到内存，并对数据进行校验、转换解析和初始化，最终形成可以被虚拟机直接使用的Java类型。
+>
+> * 2、Java可以动态扩展是依赖于运行期动态加载和动态链接的特点实现的，
+>
+> * 3、类的生命周期为：加载、验证、准备、解析、初始化、使用、卸载，其中验证、准备和解析统称为连接。
+>
+> * 4、在以下六种情况必须立即对类进行初始化：
+>
+>   * 1、遇到new、getstatic、putstatic或invokestatic这四条字节码指令时，如果类型没有进行过初始化，则需要先触发其初始化阶段，比如使用new实例化对象时，读取或者设置一个类型的静态字段。
+>
+>   * 2、如果调用java.lang.reflect包的方法对类型进行反射调用的时候，如果类型没有被初始化，则需要先触发其初始化。
+>
+>   * 3、当初始化类的时候，如果发现其父类还没有被初始化，则需要先触发其父类的初始化。
+>
+>   * 4、当虚拟机启动的时候，用户需要指定一个要执行的主类，虚拟机会先初始化这个主类。
+>
+>   * 5、当使用JDK7新加入的动态语言支持时，如果一个java.invoke.MethodHandle实例最后的解析结果为REF_getStatic、REF_putStatic、REF_invokeStatic、REF_newInvokeSpecial四种类型的方法句柄，并且这个方法句柄对应的类没有进行过初始化，则需要先触发其初始化。
+>
+>   * 6、当一个接口中定义了JDK 8新加入的默认方法(被default关键字修饰的接口方法)时，如果这个接口的实现类发生了初始化，那么该接口要在其之前被初始化。
+>
+>     **ps**
+>
+>     * 1、以上六种行为称为对一个类型进行主动引用，除此之外，所有引用类型的方式都不会触发初始化，称为被动引用。
+>     * 2、通过子类引用父类的静态字段，不会导致子类被初始化。
+>     * 3、通过数组定义来引用类，不会触发此类的初始化，但是会触发[Lorg.fenixsoft.classloading.SuperClass]的类的初始化阶段，该类是由虚拟机自动生成，由字节码指令newarray触发，包装了对数组元素的访问。
+>
+> * 5、接口也有初始化过程，编译器也会为接口生成"\<clinit\>()"类构造器，用于初始化接口中所定义的成员变量。
+>
+> * 6、一个接口在初始化的时候，并不要求其父接口全部都初始化，只有在真正使用到具体的父接口时才会初始化。
+>
+> **类加载过程详解**
+>
+> **加载**
+>
+> * 1、通过一个类的全限定名来获取定义该类的二进制字节流。
+>
+> * 2、将这个字节流所代表的静态存储结构转化为方法区的运行时数据结构。
+>
+> * 3、在内存中生成一个代表这个类的java.class.Class对象，作为方法区这个类的各种数据的访问入口。
+>
+>   **ps**
+>
+>   * 1、加载阶段既可以使用Java虚拟机里内置的引导类加载器来完成，也可以由用户自定义的类加载器去完成，开发人员可以通过定义自己的类加载器去控制字节流的获取方式，由自己实现程序获取运行代码的动态性。
+>   * 2、数组类本身不通过类加载器创建，它是由虚拟机直接在内存中构造出来的，但是数组的元素类型还是依赖类加载完成。
+>   * 3、加载阶段结束后，jvm外部的二进制字节流就按照虚拟机所设定的格式存储在方法区中，然后将类型数据放在方法区后，就会在Java堆内存中实例化一个java.lang.Class对象，作为程序访问方法区中的类型数据的外部接口。
+>
+> **验证**
+>
+> > 目的是确保Class文件的字节流中包含的信息符合Java虚拟机规范的全部约束要求，保证这些信息被当做代码运行后不会危害虚拟机自身的安全。可以防止载入有错误或者恶意企图的代码，保证虚拟机系统不会崩溃。
+> >
+> > **四个阶段的检验动作**
+> >
+> > * 1、**文件格式验证**：验证字节流是否符合Class文件格式的规范，并且能被当前版本的虚拟机处理。主要包含魔数、主次版本号、常量等验证点。保证输入的字节流能正确的解析并存储于方法区之内，格式上符合一个Java类型信息的要求。只有通过该阶段的验证，才会允许字节流进入到虚拟机内存的方法区中，后面的验证都是基于方法区存储进行的，不会再涉及直接读取字节流了。
+> > * 2、**元数据验证**： 该阶段主要是对字节码描述的信息进行语义分析，保证其描述的信息符合《Java虚拟机规范》的要求。主要的验证点包括类是否有父类、类是否继承了不允许被继承的类以及是否实现了父类或者接口中没有被实现的方法。
+> > * 3、**字节码验证**：通过数据流分析和控制流分析，确定程序语义是合法的、符合逻辑的，还要对类的方法体进行校验分析，保证被校验类的方法在运行时不会做出危害虚拟机安全的行为。
+> > * 4、**符号引用验证**：该校验行为发生在虚拟机将符号引用转化为直接引用的时候，可以看作是对类自身以外的各类信息进行匹配性校验，是否缺少或者被禁止访问它依赖的某些资源。符号引用验证主要是为了确保解析行为能正确的执行，如果无法通过符号引用验证，就会抛出java.lang.IncompatibleClassChangeError的子类异常。
+>
+> 
 
-  **红黑树**
-
-  > 红黑树可以解决二叉搜索树多次插入数据导致不平衡的问题。
-  >
-  > 红黑树是一种自平衡的二叉查找树。
-  >
-  > 红黑树从根节点到叶子节点的最长路径不会超过最短路径的两倍。
-  >
-  > **特点**：
-  >
-  > * 1、每个节点都是红色或者黑色的。
-  > * 2、根节点是黑色的。
-  > * 3、每个叶节点是黑色的。
-  > * 4、每个红色节点的两个子节点都是黑色的 -->从每个叶子到根的所有路径上不能有两个连续的红色节点。
-  > * 5、从任一节点到其每个叶子节点的所有路径都包含相同数目的黑色节点。
-  >
-  > **红黑树的调整方法**：
-  >
-  > * 1、变色：为了满足红黑树的规则，尝试把红色节点变为黑色，或者把黑色节点变为红色。
-  > * 2、旋转：
-  >   * 左旋转：逆时针旋转红黑树的两个节点，使得父节点被自己的右孩子取代，而自己成为自己的左孩子。
-  >   * 右旋转：顺时针旋转红黑树的两个节点，使得父节点被自己的左孩子取代，而自己成为自己的右孩子。
-  >
-  > **红黑树的应用**
-  >
-  > * 1、JDK的集合类TreeMap和TreeSet的底层为红黑树，而且JDK8的HashMap底层实现也使用了红黑树。
-
-* 4、HashMap的底层原理
-
-  **JDK1.7**
-
-  > **存储结构**
-  >
-  > * 1、内部包含了一个Entry类型的table数组，Entry类型用来存储键值对、哈希值以及next字段。
-  > * 2、数组的每个位置被当做一个桶，然后每个桶里面放链表。
-  > * 3、HashMap使用拉链法来解决同一个链表中存放哈希值和散列桶取模运算相同的Entry。
-  > * 4、链表的插入方式是采用的头插法。
-  > * 5、HashMap插入数据时是采用取模运算来计算应该插入的位置，如果可以保证HashMap的capacity的值为2的n次方，那么就可以将取模转化为与运算。
-  > * 6、HashMap构造函数允许用户传入的容量不是2的n次方，但是内部会自动将其转化为2的n次方。
-  >
-  > **扩容**
-  >
-  > * 1、当HashMap的size大于等于阈值threshold时就会触发扩容。
-  > * 2、扩容使用resize()方法实现需要把oldtable的所有键值对重新插入到newTable中。
-  > * 3、扩容后需要重新计算每个节点的下标，而如果HashMap的capacity为2的n次方，那么就可以加速确定的下标的过程。
-  >
-  > **其他**
-  >
-  > * 1、从JDK1.8开始，一个桶的存储的链表长度大于等于8时会将链表转化为红黑树。
-  > * 2、和Hashtable的比较：
-  >   * 1、Hashtable是线程安全的，使用synchronized来同步。
-  >   * 2、HashMap可以插入键值为null的Entry
-  >   * 3、HashMap的迭代器是fail-fast迭代器。
-  >   * 4、HashMap不能保证随着时间的推移Map元素次序是不变的。
-
-* 5、类加载过程
-
-* 6、说说MySQL的索引结构？为什么用B+树而不用哈希和B树？
-
-* 7、InnoDB和MyISAM的索引结构的区别？InnoDB主键索引和联合索引结构上的区别？InnoDB和MyISAM还有哪些区别？
-
-* 8、分库分表
-
-* 9、redis用过吗？一般怎么使用redis？redis的底层结构？为什么要使用Redis？了解Redis持久化吗
 
 ## MySQL
 
+### 美团
+
+#### 1、说说MySQL的索引结构？为什么用B+树而不用哈希和B树？
+
+#### 2、InnoDB和MyISAM的索引结构的区别？
+
+#### 3、InnoDB主键索引和联合索引结构上的区别？
+
+#### 4、InnoDB和MyISAM还有哪些区别？
+
+#### 5、分库分表
+
 ## Redis
+
+### 美团
+
+#### 1、redis用过吗？一般怎么使用redis？
+
+#### 2、redis的底层结构？为什么要使用Redis？
+
+#### 3、了解Redis持久化吗
 
 ## Spring
 
@@ -280,87 +358,84 @@
 
 ### 美团
 
-* 1、合并有序数组
+#### 1、合并有序数组
 
-  ```java
-  /**
-  给出两个有序的整数数组 和 ，请将数组 合并到数组 中，变成一个有序的数组
-  注意：
-  可以假设 数组有足够的空间存放 数组的元素， 和 中初始的元素数目分别为 和 
-  */
-  public class Solution {
-      public void merge(int A[], int m, int B[], int n) {
-          int index = m + n - 1;
-          int p1 = m - 1;
-          int p2 = n - 1;
-          while (p1 >= 0 && p2 >= 0) {
-              A[index--] = A[p1] > B[p2] ? A[p1--] : B[p2--];
-          }
-          while (p1 >= 0) {
-              A[index--] = A[p1--];
-          }
-          while (p2 >= 0) {
-              A[index--] = B[p2--];
-          }
-      }
-  }
-  ```
+```java
+/**
+给出两个有序的整数数组 和 ，请将数组 合并到数组 中，变成一个有序的数组
+注意：
+可以假设 数组有足够的空间存放 数组的元素， 和 中初始的元素数目分别为 和 
+*/
+public class Solution {
+    public void merge(int A[], int m, int B[], int n) {
+        int index = m + n - 1;
+        int p1 = m - 1;
+        int p2 = n - 1;
+        while (p1 >= 0 && p2 >= 0) {
+            A[index--] = A[p1] > B[p2] ? A[p1--] : B[p2--];
+        }
+        while (p1 >= 0) {
+            A[index--] = A[p1--];
+        }
+        while (p2 >= 0) {
+            A[index--] = B[p2--];
+        }
+    }
+}
+```
 
-  
+####  2、删除链表的倒数第n个节点
 
-* 2、删除链表的倒数第n个节点
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+/**
+给定一个链表，删除链表的倒数第 n 个节点，并且返回链表的头结点。
 
-  ```java
-  /**
-   * Definition for singly-linked list.
-   * public class ListNode {
-   *     int val;
-   *     ListNode next;
-   *     ListNode() {}
-   *     ListNode(int val) { this.val = val; }
-   *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
-   * }
-   */
-  /**
-  给定一个链表，删除链表的倒数第 n 个节点，并且返回链表的头结点。
-  
-  示例：
-  
-  给定一个链表: 1->2->3->4->5, 和 n = 2.
-  
-  当删除了倒数第二个节点后，链表变为 1->2->3->5.
-  
-  来源：力扣（LeetCode）
-  链接：https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list
-  著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
-  */
-  class Solution {
-      public ListNode removeNthFromEnd(ListNode head, int n) {
-          ListNode cur = head;
-          //先找第n个节点
-          for (int i = 0; i < n; i++) {
-              if (cur == null) {
-                  return null;
-              }
-              cur = cur.next;
-          }
-          //使用虚拟节点，防止出现只有一个节点被删除的情况
-          ListNode root = new ListNode(0);
-          root.next = head;
-          ListNode tmp = head;
-          //保存前一个节点，当找到需要删除的节点后方便删除
-          ListNode pre = root;
-          //让tmp从开始遍历，cur从第n个节点开始遍历，那么当cur走到null的时候，tmp也就走到了倒数第n个节点
-          while (cur != null) {
-              cur = cur.next;
-              pre = tmp;
-              tmp = tmp.next;
-          }
-          //删除节点
-          pre.next = tmp.next;
-          return root.next;
-      }
-  }
-  ```
+示例：
 
-  
+给定一个链表: 1->2->3->4->5, 和 n = 2.
+
+当删除了倒数第二个节点后，链表变为 1->2->3->5.
+
+来源：力扣（LeetCode）
+链接：https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list
+著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
+*/
+class Solution {
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        ListNode cur = head;
+        //先找第n个节点
+        for (int i = 0; i < n; i++) {
+            if (cur == null) {
+                return null;
+            }
+            cur = cur.next;
+        }
+        //使用虚拟节点，防止出现只有一个节点被删除的情况
+        ListNode root = new ListNode(0);
+        root.next = head;
+        ListNode tmp = head;
+        //保存前一个节点，当找到需要删除的节点后方便删除
+        ListNode pre = root;
+        //让tmp从开始遍历，cur从第n个节点开始遍历，那么当cur走到null的时候，tmp也就走到了倒数第n个节点
+        while (cur != null) {
+            cur = cur.next;
+            pre = tmp;
+            tmp = tmp.next;
+        }
+        //删除节点
+        pre.next = tmp.next;
+        return root.next;
+    }
+}
+```
+
