--- a/面试题总结.md
+++ b/面试题总结.md
@@ -4,25 +4,45 @@
 
 ## Java基础
 
+### 美团
+
+#### 1、对红黑树的了解？有什么特点
+
+#### 2、HashMap的底层原理
+
 ## 并发
+
+### 美团
+
+#### 1、谈谈对Java内存模型的了解
 
 ## JVM
 
 ### 美团
 
-* 1、谈谈对Java内存模型的了解
-* 2、对G1垃圾收集器的算法细节的了解
-* 3、对是红黑树的了解？有什么特点
-* 4、HashMap的底层原理
-* 5、类加载过程
-* 6、说说MySQL的索引结构？为什么用B+树而不用哈希和B树？
-* 7、InnoDB和MyISAM的索引结构的区别？InnoDB主键索引和联合索引结构上的区别？InnoDB和MyISAM还有哪些区别？
-* 8、分库分表
-* 9、redis用过吗？一般怎么使用redis？redis的底层结构？为什么要使用Redis？了解Redis持久化吗
+#### 1、对G1垃圾收集器的算法细节的了解
+
+#### 2、类加载过程
 
 ## MySQL
 
+### 美团
+
+#### 1、说说MySQL的索引结构？为什么用B+树而不用哈希和B树？
+
+#### 2、InnoDB和MyISAM的索引结构的区别？
+
+#### 3、InnoDB主键索引和联合索引结构上的区别？
+
+#### 4、InnoDB和MyISAM还有哪些区别？
+
+#### 5、分库分表
+
 ## Redis
+
+### 美团
+
+#### 1、redis用过吗？一般怎么使用redis？redis的底层结构？为什么要使用Redis？了解Redis持久化吗
 
 ## Spring
 
@@ -36,5 +56,6 @@
 
 ### 美团
 
-* 1、合并有序数组
-* 2、删除链表的倒数第n个节点
+#### 1、合并有序数组
+
+#### 2、删除链表的倒数第n个节点
