--- a/面试题总结答案.md
+++ b/面试题总结答案.md
@@ -319,7 +319,50 @@
 > > * 3、**字节码验证**：通过数据流分析和控制流分析，确定程序语义是合法的、符合逻辑的，还要对类的方法体进行校验分析，保证被校验类的方法在运行时不会做出危害虚拟机安全的行为。
 > > * 4、**符号引用验证**：该校验行为发生在虚拟机将符号引用转化为直接引用的时候，可以看作是对类自身以外的各类信息进行匹配性校验，是否缺少或者被禁止访问它依赖的某些资源。符号引用验证主要是为了确保解析行为能正确的执行，如果无法通过符号引用验证，就会抛出java.lang.IncompatibleClassChangeError的子类异常。
 >
-> 
+> **准备**
+>
+> > * 1、准备阶段是正式为类中定义的变量分配内存并设置类变量初始值的阶段。
+> > * 2、这时候进行内存分配的只有类变量，而实例变量将会在对象实例化时随着对象一起分配在Java堆中。
+> > * 3、此时初始值并不是程序员定义的值，而是默认是零值，但是在类字段的字段属性表存在Constant Value属性，那么准备阶段就会被初始化为Constant Value属性所指定的初始值。
+>
+> **解析**
+>
+> > * 1、解析阶段是Java虚拟机将常量池内的符号引用替换为直接引用的过程。
+> > * 2、符号引用以一组符号来描述锁引用的目标，符号可以任何形式的字面量，只要可以定位到目标即可，符号引用的目标不一定已经加载到了虚拟机的内存中。
+> > * 3、直接引用是可以直接指向目标的指针、相对偏移或者是一个能直接定位到目标的句柄。直接引用是和内存布局直接相关的。
+> > * 4、除了invokedynamic指令之外，虚拟机实现可以对第一次解析的结果进行缓存。
+> > * 5、invokedynamic指令是用于动态语言支持的，必须等到程序实际运行到该指令时，解析动作才会进行。
+> > * 6、解析动作主要针对于类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用点限定符这7类符号引用进行。
+>
+> **初始化**
+>
+> > * 1、初始化阶段就是执行类构造器的\<clinit\>方法的过程。
+> > * 2、\<clinit\>方法由Java编译器自动生成,是由编译器自动收集类中的所有类变量的赋值动作和静态语句块中的语句合并产生的，编译器收集的顺序是由语句在源文件中出现的顺序决定的，静态语句块只能访问到定义在它之前的静态变量，也可以给定义在它后面的静态变量赋值，但是不能访问。
+> > * 3、如果一个类中没有静态语句块，也没有对类变量的赋值操作，那么编译器就不会生成\<clinit\>方法。
+> > * 4、\<clinit\>方法不需要显示调用父类构造器，因为Jvm会保证在子类的\<clinit\>方法执行前，父类的\<clinit\>方法已经执行。
+> > * 5、接口中不能使用静态语句块，但是可以有变量的赋值操作，因此也会生成\<clinit\>方法，但是不需要先执行父接口的\<clinit\>方法，只有当父接口中的定义的变量被使用时，父接口才会被使用，另外在初始化时接口的实现类也不会执行接口的\<clinit\>方法。
+> > * 6、jvm必须保证一个类的\<clinit\>方法在多线程环境下被正确的加锁同步，如果有多个线程同时去初始化一个类，那么只会有一个线程去执行这个类的\<clinit\>方法，其他的线程都需要阻塞等待。
+>
+> **类和类加载器**
+>
+> > * 1、比较两个类是否相等，只有在这两个类是由同一个类加载器的前提下采用意义，包括类的Class对象的equals方法，isInstance方法以及关键字instanceof对对象做所属关系判断时。
+> >
+> > **类加载器**
+> >
+> > ```
+> > 启动类加载器：负责加载存放在<JAVA_HOME>\bin目录下或者-Xbootclasspath参数所制定的路径下所存放的，而且是虚拟机能够识别的类库加载到虚拟机内存中。无法被Java程序直接调用。如果需要调用引导类加载器，直接使用null替代即可。
+> > 扩展类加载器：该加载器是在类sun.misc.Launcher$ExtClassLoader中以Java代码实现的。负责加载<JAVA_HOME>\lib\ext目录中，或者被java.ext.dirs系统变量所指定的所有的类库。
+> > 应用程序类加载器：该加载器由sun.misc.Launcher$AppClassLoader所实现，是ClassLoader类的getSystemClassLoader()方法的返回值，负责加载用户类路径上所有的类库。
+> > ```
+> >
+> > 
+>
+> **双亲委派模型**
+>
+> <img src="./img/类加载器双亲委派模型.jpg" style="zoom:50%;" />
+>
+> >* 1、双亲委派模型要求除了顶层的启动类加载器外，其余的类加载器都应有自己的父类加载器，不过类加载器之间的关系一般不以继承的关系来实现的，而是通常使用组合关系来复用父加载器的代码。
+> >* 2、双亲委派模型的工作过程：如果一个类加载器收到了累加载的请求，它首先不会尝试自己加载这个类，而是把这个请求委派给父类加载器加载，并且每一个层次的加载器都是如此，因此所有的加载请求最终都应该传送到最顶层的启动类加载器中，只有当父加载器反馈自己无法完成这个加载请求时，子加载器才会尝试去加载。
 
 
 ## MySQL
@@ -328,11 +371,117 @@
 
 #### 1、说说MySQL的索引结构？为什么用B+树而不用哈希和B树？
 
+**前言**
+
+> **在一个页中的查找**
+>
+> * 1、以主键为搜索条件，使用二分查找确定对应的槽空间，然后在槽类遍历查找所有数据。
+>
+> **在多个页中的查询**
+>
+> ps:
+>
+> * 1、新分配的数据页编号可能不是连续的，即在存储空间不一定连续。
+> * 2、下一个数据页中用户记录的主键值必须大于上一个页中用户记录的主键值，也称为页分裂。
+>
+> 给所有的页也建立一个目录，然后采用类似于在一个页中查找的方式进行查找。
+
+**InnoDB中的索引方案**
+
+> **思想**
+>
+> * 1、复用了之前存储用户记录的数据页来存储目录项，称为目录项记录。
+> * 2、使用record_type属性(记录头中属性信息)来区分是用户记录还是最小记录，record_type的取值(0表示普通记录，1表示目录项记录，2表示最小记录，3表示最大记录)
+> * 3、目录项的记录只包含主键和页号两个属性。
+> * 4、只有在存储目录项记录的页中的主键值最小的目录项记录的min_rec_mask的值为1，其他别的记录都是min_rec_mask都是0
+>
+> **根据主键查找的步骤**
+>
+> * 1、先通过一次二分查找定位到存储目录项记录的页。
+> * 2、再到存储用户记录的页中根据二分法快速定位对应主键值的用户记录。
+>
+> **索引结构**
+>
+> * 1、索引结构采用B+树实现。
+> * 2、实际的用户记录都存储在B+树的最底层节点，即为叶节点，即B+树的叶子节点存放的是完整的用户记录。
+>
+> **聚簇索引**
+>
+> * 1、使用记录的主键值的大小来进行记录和页的排序。
+>   * 1、页内的记录是按照主键的大小顺序排成一个单向链表。
+>   * 2、各个存放用户记录的页也是根据页中用户记录的主键大小构成一个双向链表。
+>   * 3、存放目录项的页分为不同层次，而同一层次的页也按照页中目录项的主键大小构成一个双向链表。
+> * 2、B+树的叶子节点存储了完整的用户记录，即包含了所有的列以及隐藏列。
+> * 3、InnoDB会自动创建聚簇索引。
+> * 4、聚簇索引就是数据的存储方式，索引即数据，数据即索引。
+>
+> **二级索引**
+>
+> * 1、索引的方式和聚簇索引类似，不过聚簇索引是根据主键进行排序的，而二级索引是根据用户自定义的字段，而且B+的树的叶子节点只存储了主键和用来排序的字段。
+> * 2、找到对应的数据项之后，在根据得到的主键到聚簇索引中再次进行查找，也称为回表操作。
+>
+> **联合索引**
+>
+> * 1、同时以多个列的大小作为排序规则，即同时使用多个列建立索引。
+> * 2、本质上还是一个二级索引。
+>
+> **B+树索引的注意事项**
+>
+> > **根页面**
+> >
+> > * 1、每次为一个表创建一个B+树索引时，会先创建一个根节点页面，此时既没有用户记录，也没有目录项记录。
+> > * 2、向表中插入用户记录时，会先插入到根节点。
+> > * 3、当根节点的空间用完之后，就会把根节点的数据复制到另一个页面，并且这个页面会发生也分裂，得到另一个新页，再次插入数据时就会插入到新得到的两个页面中的一个，而根节点就升级为存储目录项的节点。
+> > * 4、一个B+树的根节点一旦建立后，就不再更改，并且存储在固定的地方。
+> >
+> > **内节点中目录项的唯一性**
+> >
+> > * 1、需要保证B+树同一层次的节点的目录项记录除页号字段外具有唯一性，因此对于二级索引的目录项来说，不仅包含了页号和索引列外，还包含了主键。
+> >
+> > **一个页面最少存储2条记录**
+
 #### 2、InnoDB和MyISAM的索引结构的区别？
+
+[**InnoDB的索引结构**](####1、说说MySQL的索引结构？为什么用B+树而不用哈希和B树？)
+
+**MyISAM的索引结构**
+
+> **MyISAM的索引方案**
+>
+> * 1、虽然也采用了树形结构，但是它将数据和索引分开存储。
+> * 2、将表中的记录按照插入顺序单独存储在一个数据文件中，称为数据文件，通过行号来快速访问具体的记录。
+> * 3、MyISAM引擎的表会把索引信息存储在一个称为索引文件的文件中，MyISAM会为主键单独创建一个索引，但是索引的叶子节点只存储了主键值和行号，也就是需要先通过主键找到对应的行号，然后在数据文件中通过行号得到对应的用户记录。
+> * 4、MyISAM中的索引都是二级索引。如果需要对其他列创建索引，原理和InnoDB的方式基本一致。
+
+**共同点**
+
+* 1、InnoDB和MyISAM都会自动主键或者声明为unique的列去自动创建B+树索引。
 
 #### 3、InnoDB主键索引和联合索引结构上的区别？
 
+**主键索引**
+
+* 1、主键索引即为聚簇索引，从根节点开始，对每一层进行二分查找，确定目录项所在的页。
+* 2、对目录项的页进行二分查找，通过目录项页确定用户记录真实所在的页。
+* 3、最后在真实的用户记录页查找到用户记录所在的槽(二分查找)，然后通过遍历槽得到所查找的用户记录。
+
+**联合索引**
+
+* 1、联合索引本质上是二级索引，即为某些特定的列创建的B+树索引，B+树索引的叶子节点没有存储完整的用户记录，只存储了某些特定的列、主键值。然后查找方式与主键索引基本类似，查找后得到了对应的主键值。
+* 2、再通过主键值在聚簇索引中查找对应的完整记录，即为回表操作。
+
 #### 4、InnoDB和MyISAM还有哪些区别？
+
+> 在5.5版本之前，MyISAM是MySQL的默认存储引擎，在之后默认的存储引擎修改为InnoDB。
+>
+> MyISAM不支持事务和行级锁，而且崩溃后无法安全恢复。
+
+**两者的对比**
+
+* 1、是否支持行级锁：MyISAM只支持表级锁，而InnoDB支持表级锁和行级锁，默认为行级锁。
+* 2、是否支持事务和崩溃后安全恢复：MyISAM较注重性能，每次查询都是原子性，执行速度比InnoDB快，但是不提供事务支持。InnoDB提供事务支持、外键等高级数据功能，具有事务、回滚和崩溃修复能力的事务安全型表。
+* 3、是否支持外键：MyISAM不支持外键，而InnoDB支持外键。
+* 4、是否支持MVCC：只有InnoDB支持，应该高并发事务，MVCC比单纯的加锁更高效；MVCC只在READ COMMIT和REPEAT READ两个隔离级别下工作；MVCC可以使用乐观锁和悲观锁来实现；但是各种数据库中的MVCC并不统一。
 
 #### 5、分库分表
 
