--- a/面试题总结答案.md
+++ b/面试题总结答案.md
@@ -485,6 +485,53 @@
 
 #### 5、分库分表
 
+参考链接：[彻底搞清分库分表（垂直分库，垂直分表，水平分库，水平分表）](https://blog.csdn.net/weixin_44062339/article/details/100491744)
+
+> * 1、分库分表是为了解决由于数据量过大而导致数据库性能降低的问题，将原来独立的数据库拆分成若干数据库组成，将数据大表拆分成若干数据表组成，使得单一数据库、单一数据表的数据量变小，从而达到提升数据库性能的目的。
+>
+> * 2、分库分表分为垂直分库、水平分库、垂直分表、水平分表。
+>
+>   
+
+**垂直分表**
+
+>**定义**：将一个表按照字段分成多表，每个表存储一部分字段。
+>
+>* 1、当表的数据量较大时，可以将表的热门字段和冷门字段分开放置在不同库中，而这些库可以放在不同的存储器上。
+>
+>* 2、垂直切分带来提升主要集中在热门数据的操作效率上，而且磁盘争用情况减少。
+>
+>**提升**
+>
+>* 1、避免IO争抢并减少锁表的几率，使分开的字段互不影响。
+>* 2、充分发挥热门数据的操作效率，使访问频次高的字段不会被访问频次低的字段所影响。
+>
+>**大字段IO效率低的原因**
+>
+>* 1、由于大字段的数据量比较大，因此需要读取的时间更长。
+>* 2、页是数据库存储单位，很多查找及定位操作都是以页为单位的，单页内的数据行越多数据库整体的性能越好，但是大字段占用空间大，单页内存储的行数较少，因此IO效率较低。
+>* 3、数据库以行为单位将数据加载到内存中，对于这表中的字段长度较短的且访问频率较高的字段，内存可以加载更多的数据，从而提高命中率，减少了磁盘IO，从而提升数据库性能。
+>
+>**垂直拆分的原则**
+>
+>* 1、把不常用的字段单独放在一张表中。
+>* 2、把text、blob等大字段拆分出来放在附表中。
+>* 3、把经常组合查询的列放在一张表中。
+
+**垂直分库**
+
+> 通过垂直分表性能可以得到一定的提升，但是依然不能达到要求，因为数据都存储在一台机器上，库内的垂直分表只解决了单一表数据量过大的问题，但是没有将表分布到不同的服务器上，因此每个表还是竞争同一个物理机的CPU、内存、网络IO、磁盘。
+>
+> **定义**：垂直分库是按照业务将表进行分类，分布到不同的数据库上面，而每个库可以存储在不同的服务器上，核心理念是专库专用。
+>
+> **提升**
+>
+> * 1、解决业务层面的耦合，业务清晰。
+> * 2、能对不同的业务的数据进行分级管理、维护、监控、扩展等。
+> * 3、高并发场景下，垂直分库可以在一定程度上提升IO、数据连接数、降低单机硬件资源的瓶颈。
+>
+> 垂直分库通过将表按业务分类，然后分布在不同的数据库上，并且可以将这些数据部署在不同的服务器上，从而达到多个服务器共同分摊压力的效果，但是依然没有解决单表数据量过大的问题。
+
 ## Redis
 
 ### 美团
