--- a/面试题总结答案.md
+++ b/面试题总结答案.md
@@ -517,6 +517,8 @@
 >* 1、把不常用的字段单独放在一张表中。
 >* 2、把text、blob等大字段拆分出来放在附表中。
 >* 3、把经常组合查询的列放在一张表中。
+>
+>**总结**：可以把一个宽表的字段按照访问频次或者是否为大字段的原则拆分为多个表，既能使业务清晰，还能提升部分性能，但是还注意避免避免联查。
 
 **垂直分库**
 
@@ -531,6 +533,35 @@
 > * 3、高并发场景下，垂直分库可以在一定程度上提升IO、数据连接数、降低单机硬件资源的瓶颈。
 >
 > 垂直分库通过将表按业务分类，然后分布在不同的数据库上，并且可以将这些数据部署在不同的服务器上，从而达到多个服务器共同分摊压力的效果，但是依然没有解决单表数据量过大的问题。
+
+**水平分库**
+
+> * 1、水平分库是把同一个表的数组按照一定的规则拆分到不同的数据库中，而每个库可以存放不同的服务器上。
+> * 2、垂直分库是把不同的表拆分到不同的数据库中，它是对数据行的拆分，不影响表结构。
+>
+> **提升**
+>
+> * 1、解决了单库大数据、高并发的性能瓶颈。
+> * 2、提高了系统的稳定性以及可用性。 == 稳定性体现在IO冲突减少，锁定减少，可用性指某个库出问题，部分可用
+>
+> **细节问题**
+>
+> * 1、当一个应用难以在细粒度的垂直切分，或者切分后数据量行数巨大，存在单库读写、存储性能瓶颈时，就可以进行水平分库，可以解决单库存储量以及性能瓶颈。
+> * 2、由于同一个表的数据被分布在不同的数据库中，因此需要额外进行对数据操作的路由操作，提升了系统的复杂度。
+>
+> **总结**：可以把一个表的数据分布到多个不同的库中，每个库都只有这表的部分数据，这个库可以分布在不同的服务器，从而使访问压力被多服务器负载，大大提升性能。但是需要解决跨库带来的问题以及数据操作的路由问题。
+
+**水平分表**
+
+> 水平分表是在同一个数据库内，把同一个表的数据按一定规则拆到多个表中。
+>
+> **提升**
+>
+> * 1、优化单一表数据量过大而产生的性能问题。
+> * 2、避免IO争抢并减少锁表的几率。
+> * 3、解决了单一表数据量过大的问题，分出来的小表具有小部分数据，提高了检索性能。
+>
+> 将一个表的数据分到同一个数据库的多张表中，每个表只有这个表的部分数据，但是仅仅作为水平分库的一个补充优化。
 
 ## Redis
 
