--- a/面试题总结.md
+++ b/面试题总结.md
@@ -42,7 +42,11 @@
 
 ### 美团
 
-#### 1、redis用过吗？一般怎么使用redis？redis的底层结构？为什么要使用Redis？了解Redis持久化吗
+#### 1、redis用过吗？一般怎么使用redis？
+
+#### 2、redis的底层结构？为什么要使用Redis？
+
+#### 3、了解Redis持久化吗
 
 ## Spring
 
