--- a/面试题总结答案.md
+++ b/面试题总结答案.md
@@ -569,9 +569,141 @@
 
 #### 1、redis用过吗？一般怎么使用redis？
 
+> * 1、Redis是一个使用C语言开发的数据库，但是Redis的数据是存储在内存中，读写速度非常快，主要用于做缓存。
+>
+> **Redis的应用**
+>
+> > * 1、Redis可以用来做分布式锁，甚至是消息队列。
+> > * 2、Redis提供了多种数据类型来支持不同的业务，如string、list、hash等。
+> > * 3、Redis还支持事务、持久化、Lua脚本以及多种集群方案。
+
 #### 2、redis的底层结构？为什么要使用Redis？
 
+**Redis的底层结构**
+
+> **string**
+>
+> > * 1、redis自己构建了一种简单动态字符串SDS的抽象类型，并将其作为Redis的默认字符串。
+> > * 2、C字符串只会作为字符串字面量用在不许对其修改的地方。
+> > * 3、SDS还被用作缓冲区：如AOF模块的AOF缓冲区，以及客户端状态中的输入缓冲区。
+> >
+> > **结构**
+> >
+> > * 1、每个sdshdr结构表示一个SDS的值，包含三个属性，buf数组用来保存字符串，len，表示所保存的字符串的长度，free表示未使用的字节的数量。  设置和更新len的值是由SDS自动完成的。
+> > * 2、SDS同时也遵循了C字符串以空字符结尾的习惯，主要是为了使用C字符串的部分函数。但是空字符的1字节不计算在len属性里面，并且为空字符分配空间和将其放在字符串末尾都是由SDS自动完成的。
+> >
+> > **优点**
+> >
+> > * 1、常数时间复杂度获得字符串的长度。
+> >
+> > * 2、通过free属性来防止缓冲区溢出：SDS字符串在修饰时会先检查空间是否会溢出，不满足会进行扩容。
+> >
+> > * 3、减少修改字符串时带来的内存重分配次数，见下面的两种分配策略。
+> >
+> >   **空间预分配**：SDS在进行空间扩展时，也会同时扩展额外的未使用空间。主要用于字符串增长操作。
+> >
+> >   **惰性空间释放**：SDS不会再删除字符串时就直接删除，而是使用free属性记录，便于后边继续使用，主要用于字符串变短的操作。
+> >
+> > * 4、二进制安全：SDS的api都是采用二进制的方式来处理SDS存在buf的数据，不会对数据做任何限制。因为SDS是使用len属性来判断字符串是否结束的。
+> >
+> > * 5、因为SDS也是也空字符结尾的，因此可以兼容部分的C字符串函数。
+>
+> **链表**
+>
+> > * 1、列表键的底层实现之一就是链表。	
+> > * 2、链表还可以用于发布与订阅、慢查询、监视器等功能。
+> > * 3、Redis服务器也使用链表来保存多个客户端的状态信息以及客户端输出缓冲区。
+> >
+> > **结构**
+> >
+> > * 1、链表使用listNode和list构成，listNode构成了双端链表，使用list来持有该双端链表。
+>
+> **字典**
+>
+> > * 1、字典是一种用于保存键值对的抽象数据结构。
+> > * 2、Redis数据库是使用字典来作为底层实现的，对数据的增、删、改、查也是构建在字典之上的。
+> > * 3、字典也是哈希键的底层之一，主要用在元素较多的时候。
+> >
+> > **结构**
+> >
+> > * 1、Redis的字典使用哈希表实现，一个哈希表又包含多个哈希表节点，每个哈希表节点即为一个键值对。
+> > * 2、哈希算法：当添加新的键值对时，需要先根据键值对的键计算出哈希值和索引值，然后根据索引值，将包含键值对的哈希表节点放在哈希表的指定索引上。
+> > * 3、解决键冲突：Redis的哈希表使用链地址法来解决键冲突。插入键值对也是采用头插法。
+> > * 4、rehash: 当哈希表保存的键值对太多或者太少时，需要对哈希表进行相应的扩大或者收缩。
+> >
+> > **哈希表的扩展和收缩**
+> >
+> > * 1、服务器目前没有在执行BGSAVE命令或者BFREWRITEAOF命令，并且哈希表的负载因子大于等于1。
+> > * 2、服务器目前正在执行BGSAVE命令或者BGREWRITEAOF命令，并且哈希表的负载因子大于等于5。
+> > * 3、当负载因子小于0.1时，程序自动开始对哈希表执行收缩操作。
+> >
+> > **渐进式rehash**
+> >
+> > 为了避免rehash对服务器性能造成影响，服务器不是一次性将ht[0]中的所有键值对全部rehash到ht[1]，而是分多次、渐进式的将ht[0]里面的键值对慢慢rehash到ht[1].
+> >
+> > > * 1、为ht[1]分配空间，让字典同时持有ht[0]和ht[1]的两个哈希表。
+> > > * 2、在字典中维持一个索引计数器变量rehashidx,并将其设置为0。
+> > > * 3、在rehash期间，每次对字典执行添加、删除、查找或者更新操作时，除了执行指定操作后，还会将rehashidx的所有键值对rehash到ht[1]，然后将rehashidx+1。
+> > > * 4、随着字典序的操作，最终ht[0]的所有键值对都会被移动到ht[1]。
+> >
+> > 将rehash键值对所需的计算工作均摊到对字典的添加、删除、查找等操作中，从而避免集中式rehash而带来的庞大计算量。
+>
+> **跳跃表**
+>
+> > * 1、跳跃表是一种有序结构，通过在每个节点中维持多个指向其他节点的指针，从而达到快速访问节点的目的。
+> > * 2、跳跃表支持平均O(logN)、最坏O(N)的时间复杂度查找节点，也可以通过顺序性操作来批量处理节点。
+> > * 3、Redis使用跳跃表作为有序集合键的底层实现之一，当有序集合中包含的元素过多时就会使用跳跃表。
+> >
+> > **应用**
+> >
+> > * 1、实现有序集合键
+> > * 2、在集群节点中用作内部数据结构。
+> >
+> > **结构**
+> >
+> > * 1、跳跃表使用zskiplistNode结构和zskip结构实现，zskiplistNode用于表示跳跃表的节点，而zskiplist则用于持有所有的跳跃表节点，包含了头尾指针，以及跳跃表的节点数量。
+>
+> **整数集合**
+>
+> > * 1、整数集合是Redis用于保存整数值的集合抽象数据结构，可以保证集合中不会出现重复元素，作为集合键的底层实现之一。
+> > * 2、各个项在contents数组中按值的大小从小到大有序的排列，并且数组中不包含任何重复项。
+> > * 3、contents数组的类型取决于encoding属性的值。
+> >
+> > **升级**
+> >
+> > * 1、升级为整数集合带来了操作上的灵活性，并且尽可能地节约了内存。
+> >
+> > **降级**
+> >
+> > * 1、整数集合只支持升级操作，不支持降级操作。
+>
+> **压缩列表**
+>
+> **对象**
+
+**使用Redis的原因**
+
+> * 1、Redis将数据都存储在内存中，从而保证达到最快的读写速度。
+> * 2、Redis通过异步的方式将数据写入磁盘中，所以Redis具有快速和数据持久化的特征。
+> * 3、如果数据没有存放在内存中，那么Redis会受到磁盘I/O的影响。
+> * 4、具有比较丰富的数据类型，支持string,list,set,sorted set, hash等。
+> * 5、支持事务，操作都是原子性。
+> * 6、可以用于缓存，按key设置过期时间，过期后会自动删除。
+
 #### 3、了解Redis持久化吗
+
+> * 1、我们将Redis服务器中的非空数据库以及它们的键值对统称为数据库状态
+> * 2、由于Redis是内存数据库，它将自己的数据库状态存储在内存中，如果不把存储在内存中的数据库保存到磁盘中，那么一旦服务器进程退出后，服务器中的数据就会丢失，因此Redis提供了RDB和AOF两种持久化。
+
+**RDB持久化**
+
+> * 1、RDB持久化既可以手动执行，也可以根据服务器配置选项定期执行，该功能将某个时间点的数据库状态保存到一个RDB文件中，并且将其保存到硬盘。
+>
+> **RDB的创建和导入**
+>
+> 
+
+**AOF持久化**
 
 ## Spring
 
